# pydantic-schema-registry

./: .gitignore  pyproject.toml
schema_registry/: __init__.py  _types.py  client.py  errors.py  models.py  reflection.py  utils.py
tests/: test_both.py  test_reflection.py  test_schema_registry.py
