[tool.poetry]
name = "schema-registry"
version = "0.1.0"
description = ""
authors = ["ozzeh <ozzeh@pleaseignore.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.7.2"
boto3 = "^1.16.25"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
