[tool.poetry]
name = "schema-registry"
version = "0.1.4"
description = ""
authors = ["ozzeh <ozzeh@pleaseignore.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.7.2"
boto3 = "^1.16.25"
devtools = "^0.6.1"
jsonpointer = "^2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.790"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
